# Applied_AI_Engineer

AI-Driven_Support_Triage_System/: README.md  docker-compose.yml  requirements.txt
AI-Driven_Support_Triage_System/api/: main.py  schemas.py
AI-Driven_Support_Triage_System/core/: llm_client.py
AI-Driven_Support_Triage_System/graph/: state.py  workflow.py
AI-Driven_Support_Triage_System/sdk/: client.py
AI_Travel_Planner_with_Tools/: README.md
B2B_Billing_AI_Agent_Automator/: README.md  main.py  requirements.txt
ChatBot_RAG/: README.md
Financial_Fraud_Detection_NLP_to_SQL/: README.md
LLM_Comparison_Evaluation_Harness/: README.md  eval_config.yaml  pyproject.toml
LLM_Comparison_Evaluation_Harness/datasets/sample/: prompts.yaml
LLM_Comparison_Evaluation_Harness/llm_eval/: cli.py  models.py  runner.py
LLM_Comparison_Evaluation_Harness/llm_eval/adapters/: ollama.py
LLM_Comparison_Evaluation_Harness/llm_eval/reporters/: html.py  report.html.j2
LLM_Comparison_Evaluation_Harness/llm_eval/scorers/: diff.py  llm_judge.py  summary.py
LLM_Comparison_Evaluation_Harness/llm_eval/tasks/: loader.py
LLM_Comparison_Evaluation_Harness/reports/: sample-eval_20260508_084241.html
ML_Pipeline_Credit_Card_Fraud_Detection/: Dockerfile  Makefile  README.md  docker-compose.yml  pipeline.py  requirements.txt
Multi-Modal_Evidence_Review_HackerRank_Orchestrate_Jun_2026/: README.md  output.csv
Multimodal_Documentation_Explorer_RAG/: README.md
RAG_with_Semantic_Cache_Re-Ranking_Safety_Guardrails/: README.md  requirements.txt
Sentiment_Analysis_Fine-tuning/: README.md
TOONify_JSON_to_TOON_AI_Pipeline/: README.md
(+22 files in other folders)
